[gd_scene load_steps=12 format=3 uid="uid://bvvpx368m3e3s"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_v4k8h"]
[ext_resource type="Texture2D" uid="uid://bjoxjj0jnkr6w" path="res://assets/spritesheets/orbs.png" id="2_li3fl"]
[ext_resource type="AudioStream" uid="uid://32o02lqf2yk3" path="res://assets/audio/bump.wav" id="3_mfxg5"]
[ext_resource type="AudioStream" uid="uid://dwlvosvr7x7p3" path="res://assets/audio/match_sfx.wav" id="4_3fgvb"]
[ext_resource type="AudioStream" uid="uid://cfeiqq6uxo37" path="res://assets/audio/hit_sfx.wav" id="5_rna8c"]
[ext_resource type="AudioStream" uid="uid://bpmposq04sqeq" path="res://assets/audio/heal_sfx.wav" id="6_aofyr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_idfmn"]
atlas = ExtResource("2_li3fl")
region = Rect2(4, 4, 56, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub38b"]
atlas = ExtResource("2_li3fl")
region = Rect2(68, 4, 56, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgisi"]
atlas = ExtResource("2_li3fl")
region = Rect2(132, 4, 56, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o7rt"]
atlas = ExtResource("2_li3fl")
region = Rect2(4, 4, 56, 58)

[sub_resource type="CircleShape2D" id="CircleShape2D_2r1tr"]
radius = 29.0

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource("1_v4k8h")
red_texture = SubResource("AtlasTexture_idfmn")
blue_texture = SubResource("AtlasTexture_ub38b")
yellow_texture = SubResource("AtlasTexture_vgisi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_5o7rt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2r1tr")

[node name="BumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mfxg5")

[node name="MatchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3fgvb")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_rna8c")

[node name="HealSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_aofyr")
volume_db = -5.0

[node name="SpeedTimer" type="Timer" parent="."]

[node name="ShieldTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_shield_timer_timeout"]
